@@ -2,34 +2,11 @@
  * Written by J.T. Conklin <jtc@netbsd.org>.
  * Public domain.
  *
- * Changed to use fyl2xp1 for values near 1, <drepper@cygnus.com>.
  * Adapted for i686 instructions.
  */
 
 #include <machine/asm.h>
 
-#ifdef __ELF__
-	.section .rodata.cst8,"aM",@progbits,8
-#else
-	.text
-#endif
-	.p2align 3
-	ASM_TYPE_DIRECTIVE(one,@object)
-one:	.double 1.0
-	ASM_SIZE_DIRECTIVE(one)
-	/* It is not important that this constant is precise.  It is only
-	   a value which is known to be on the safe side for using the
-	   fyl2xp1 instruction.  */
-	ASM_TYPE_DIRECTIVE(limit,@object)
-limit:	.double 0.29
-	ASM_SIZE_DIRECTIVE(limit)
-
-
-#ifdef PIC
-# define MO(op) op##@GOTOFF(%edx)
-#else
-# define MO(op) op
-#endif
 
 	.text
 ENTRY(__ieee754_log)
@@ -37,22 +14,6 @@ ENTRY(__ieee754_log)
 	fldl	4(%esp)		// x : log(2)
 	fucomi	%st
 	jp	3f
-#ifdef PIC
-	LOAD_PIC_REG (dx)
-#endif
-	fld	%st		// x : x : log(2)
-	fsubl	MO(one)		// x-1 : x : log(2)
-	fld	%st		// x-1 : x-1 : x : log(2)
-	fabs			// |x-1| : x-1 : x : log(2)
-	fld	MO(limit)	// 0.29 : |x-1| : x-1 : x : log(2)
-	fcomip	%st(1)		// |x-1| : x-1 : x : log(2)
-	fstp	%st(0)		// x-1 : x : log(2)
-	jc	2f
-	fstp	%st(1)		// x-1 : log(2)
-	fyl2xp1			// log(x)
-	ret
-
-2:	fstp	%st(0)		// x : log(2)
 	fyl2x			// log(x)
 	ret
 
@@ -63,18 +24,6 @@ END (__ieee754_log)
 ENTRY(__log_finite)
 	fldln2			// log(2)
 	fldl	4(%esp)		// x : log(2)
-#ifdef PIC
-	LOAD_PIC_REG (dx)
-#endif
-	fld	%st		// x : x : log(2)
-	fsubl	MO(one)		// x-1 : x : log(2)
-	fld	%st		// x-1 : x-1 : x : log(2)
-	fabs			// |x-1| : x-1 : x : log(2)
-	fld	MO(limit)	// 0.29 : |x-1| : x-1 : x : log(2)
-	fcomip	%st(1)		// |x-1| : x-1 : x : log(2)
-	fstp	%st(0)		// x-1 : x : log(2)
-	jc	2b
-	fstp	%st(1)		// x-1 : log(2)
-	fyl2xp1			// log(x)
+	fyl2x			// log(x)
 	ret
 END(__log_finite)
